[package]
name = "fern"
version = "0.1.0"
description = "a tool to manage multiple remotes"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive", "wrap_help"] }
colored = "3.1.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
